--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,9 @@
 version: '3.8'
 
 services:
-  frontend:
+  app:
     build:
       context: .
-      dockerfile: Dockerfile.frontend
+      dockerfile: Dockerfile.prod
     ports:
-      - "5173:5173"
-    volumes:
-      - ./echonet-frontend:/app
-      - node_modules:/app/node_modules
-    working_dir: /app
-
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile.backend
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./echonet_backend:/app
-    working_dir: /app
-    command: python manage.py runserver 0.0.0.0:8000
-
-volumes:
-  node_modules:
+      - "8000:8000" 
